tests/sumo/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (53ms).
Loading additional-files from 'input_additional.add.xml' ... 
done (9ms).
Loading additional-files from 'input_additional2.add.xml' ... done (13ms).
Loading done.
Simulation version v1_12_0+2268-c780f6aff03 started with time: 0.00
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 12.04s
 Real time factor: 41.5179
 UPS: 2557.751391
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 91
 Waiting: 1
Statistics (avg):
 RouteLength: 350.68
 Speed: 7.69
 Duration: 65.67
 WaitingTime: 29.57
 TimeLoss: 47.15
 DepartDelay: 0.70

